# snake-rl

./: .gitignore  LICENSE  README.md  command_line_to_sb3.txt  test_env_with_torch.py
cartpole_perception/: README.md  evaluate.py
project2/: evaluate.py  generate_data.py  model_error_distribution.py  train.py  visualize_errors.py
project3/: evaluate.py  history_stacker.py  ppo_cartpole.pth  ppo_trainer.py  train.py
project4/: evaluate.py  vision_extractor.py
project5/: coc_env.py  coc_error_distribution.json  evaluate.py  history_stacker.py  ppo_trainer.py  sac_trainer.py  train.py
project6/: model.py  preprocessing.py  test.py  train.py
project7/: README.md  blur_ops.py  evaluate.py  evaluate_single_image.py  model.py  preprocessing.py  train.py  visualize_dataset.py
project8/: README.md  coc_env.py  evaluate_visual.py
project8/reference/: evaluate_visual.py  history_stacker.py
projecta/: coc_env.py  train.py
projectb/: coc_env.py  coc_sharpness_env.py  evaluate.py  my_gym.py  train.py  visualize_sharpness.py
projectc/: coc_sharpness_env.py  evaluate.py  sac_trainer.py  train.py
projectd/: coc_env.py  coc_sharpness_env.py  evaluate.py  history_stacker.py  project_overview_zh.md  sac_trainer.py  train.py  transformer_encoder.py  transformer_lightning.py  transformer_swin.py
projectd/reference/project7/: 1_preprocessing.py  2_train.py  2_visualize_dataset.py  3_generate_tensor_db.py  3_train.py  5_generate_tensor_db.py  6_visualize_generated_db.py  MIL_Patch_CNN_设计文档.md  README.md  blur_ops.py  generate_tensor_db.py  model.py  test_foreground_background.py  verify_tensor_performance.py  visualize_generated_db.py
projectd/reference/project7/runs/coc_mil_patch_experiment_1/: events.out.tfevents.1772723483.L13YogaGen1.740848.0
projecte_mlp_finetune/: README.md  coc_sharpness_env.py  evaluate.py  extract_transformer.py  sac_trainer.py  sac_trainer_fine_tune_mlp.py  scene_refactor_plan.md  train.py  transformer_encoder.py  visualize_sharpness.py
projectf_captured_psf/: 1_parse_imatest_to_psf_grid.py  2_preprocessing.py  3_generate_tensor_db.py  5_evaluate.py  README.md  blur_ops.py  imatest_sfr_workflow_zh.md  sfr_processor.py  test_field_dependent_blur.py  walkthrough_zh.md
projectg_quantization8bit_onnx_linux/: DEPLOYMENT_WALKTHROUGH.md  convert_lmdb_to_bson.py  export_hrnet.py  export_transformer_and_actor.py  quantize_models.py  reproduce.md
projectg_quantization8bit_onnx_linux/c_plus_plus_src/: .clang-format  CMakeLists.txt  CoCEnv.cpp  CoCEnv.h  HistoryStacker.cpp  HistoryStacker.h  coc_env.cpp  coc_env.h  engine.cpp  engine.h  history_stacker.cpp  history_stacker.h  inference.cpp  test_inference.cpp
projecth_video_mode/: sac_trainer.py
